package com.example.oulearning.organization.domain.employee;

@FunctionalInterface
public interface IdGenerator {
    long generate();
}
